# ecommerce-dataset-checkout-data

./: .gitignore  1.ipynb  2.ipynb  README.md  airflow_database.sh  main.ipynb  main.py  pyproject.toml  requirements.txt
bash utils/: airflow_scheduler.sh  airflow_web_server.sh
dags/: main.py
playground/: 1.ipynb
