[project]
name = "ecommerce-dataset-checkout-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "ruff>=0.11.4",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]
